@@ -34,10 +34,18 @@ import java.util.*;
 */
 public class MetaMsgCommand extends StdCommand
 {
-	public MetaMsgCommand(){}
+	public MetaMsgCommand()
+	{
+	}
 
-	private final String[] access=I(new String[]{"METAMSGCOMMAND"});
-	@Override public String[] getAccessWords(){return access;}
+	private final String[]	access	= I(new String[] { "METAMSGCOMMAND" });
+
+	@Override
+	public String[] getAccessWords()
+	{
+		return access;
+	}
+
 	@Override
 	public boolean execute(MOB mob, List<String> commands, int metaFlags)
 		throws java.io.IOException
@@ -59,7 +67,22 @@ public class MetaMsgCommand extends StdCommand
 			return false;
 		}
 	}
-	@Override public double combatActionsCost(final MOB mob, final List<String> cmds){return CMProps.getCommandCombatActionCost(ID());}
-	@Override public double actionsCost(final MOB mob, final List<String> cmds){return CMProps.getCommandActionCost(ID());}
-	@Override public boolean canBeOrdered(){return false;}
+
+	@Override
+	public double combatActionsCost(final MOB mob, final List<String> cmds)
+	{
+		return CMProps.getCommandCombatActionCost(ID());
+	}
+
+	@Override
+	public double actionsCost(final MOB mob, final List<String> cmds)
+	{
+		return CMProps.getCommandActionCost(ID());
+	}
+
+	@Override
+	public boolean canBeOrdered()
+	{
+		return false;
+	}
 }
