@@ -535,6 +535,7 @@ public interface RawMaterial extends Item
 	public final static int	RESOURCE_TAR			= MATERIAL_LIQUID | 202;
 	public final static int	RESOURCE_SALT			= MATERIAL_ROCK | 203;
 	public final static int	RESOURCE_SPICE			= MATERIAL_VEGETATION | 204;
+	public final static int	RESOURCE_DIRT			= MATERIAL_ROCK | 205;
 	
 	public final static int	RESOURCE_MASK			= 255;
 
@@ -764,6 +765,7 @@ public interface RawMaterial extends Item
 		TAR(RESOURCE_TAR				, 10,   15, 2, 1280, "strong oily", "", null),
 		SALT(RESOURCE_SALT, 10, 20, 5, 750, "", "", null),
 		SPICE(RESOURCE_SPICE, 100, 5, 1, 750, "spicy smell", "", null),
+		DIRT(RESOURCE_DIRT, 1, 50, 1, 1600, "rich earthy smell", "", null),
 		
 		;//code, 						  v, freq, h, b, smell, effects, ResourceFlag flags
 		public final int			code, value, frequency, hardness, bouancy;
