@@ -6,6 +6,7 @@ Short(s): \n\r\
 If this mud supports accounts, this command will show the account name, \
 a list of characters, and the account expiration date, if applicable.
 
+ARCHELP=AHELP
 AHELP=\
 Command : AHELP\n\r\
 Usage   : AHELP [TOPICNAME]\n\r\
@@ -43,6 +44,7 @@ specified maintenance threads to immediately go through a cycle.  \
 Use LIST REPORTS to get a list of maintenance threads.  The CLANTICK \
 argument forces the timed clan maintenance.
 
+ARCTOPICS=ATOPICS
 ATOPICS=\
 Command : ATOPICS\n\r\
 Usage   : ATOPICS [TOPICNAME]\n\r\
@@ -1835,6 +1837,14 @@ For use as part of automated testing, MPRUN can also be executed by unauthorized
 so long as they know the username and password of an authorized user.  Any failed attempts \
 to use this command will cause the user to be marked as unable to use this command for \
 two minutes.
+
+TEST=\
+Command  : TEST\n\r\
+Usage    : TEST ALL/[TEST NAME]\n\r\
+Example  : test all\n\r\
+Short(s) : \n\r\
+Runs a series of internal tests.  This command is only for code developers, and takes a lot \
+of time and resources to complete, so use it only if you know why you are doing it.
 
 WIZINFO=\
 Command : WIZINFO\n\r\
