@@ -116,6 +116,8 @@ This skill also allows the player to learn how to smith an item he \
 or she has found.  To do this, the player needs to have a blank Recipe \
 page, or a Recipe book with blank pages in his or her inventory.
 
+ASTROENGINEER=Sorry, but this is Not Yet Implemented
+
 BAKE=BAKING
 BAKING=<ABILITY>\
 Usage    : BAKE LIST/[BAKING CONTAINER]\n\r\
@@ -161,6 +163,7 @@ or a recipe book with blank pages in his or her inventory. \
 The raw metal for blacksmithing can be obtained using the Mining skill, \
 and better metals through the Smelting skill. 
 
+BODYPIERCE=BODY_PIERCING
 BODYPIERCING=BODY_PIERCING
 BODY_PIERCING=<ABILITY>\
 Usage    : BODYPIERCING (REMOVE) [TARGET NAME] [LOCATION]\n\r\
@@ -171,6 +174,7 @@ must hold still for it, of course.  What results can only be seen when the \
 proper wear location is not covered by clothing.  Parts available for piercing \
 include the lip, nose, ears, eyebrows, nipples, and belly button.
 
+MBUTCHERING=BUTCHERING
 SKIN=BUTCHERING
 BUTCHER=BUTCHERING
 BUTCHERING=<ABILITY>\
@@ -476,6 +480,7 @@ To begin fletching, the player must have placed the wood \
 he or she wishes to make the item from on the ground. \
 The raw wood for fletching is obtained by using the Chopping skill.
 
+FOODPREPPING=FOOD_PREP
 FOODPREP=FOOD_PREP
 FPREP=FOOD_PREP
 FOOD_PREP=<ABILITY>\
@@ -825,6 +830,7 @@ containers). \
 The ingredients for cooking are best obtained through the Butchering skill \
 and the Foraging skill, and some Food Prep may be necessary for some dishes.
 
+MASTERCOSTUME=MASTERCOSTUMING
 MCOSTUME=MASTERCOSTUMING
 MASTER_COSTUMING=MASTERCOSTUMING
 MCOSTUMING=MASTERCOSTUMING
@@ -854,6 +860,7 @@ using the scan parameter. \
 The raw cloth for costuming is found using the Butchering, Shearing, or Foraging \
 skills.
 
+MDISTILLING=MASTER_DISTILLING
 MDISTILL=MASTER_DISTILLING
 MASTERDISTILL=MASTER_DISTILLING
 MASTERDISTILLING=MASTER_DISTILLING
@@ -914,6 +921,7 @@ Fishing, but yields three times as many fish. Fishing it best done in the water.
 You can also bundle multiple resources together using this skill.  The GET command \
 can be used to unbundle such resources.
 
+MFOODPREPPING=MASTER_FOOD_PREP
 MFOODPREP=MASTER_FOOD_PREP
 MFPREP=MASTER_FOOD_PREP
 MASTERFOODPREP=MASTER_FOOD_PREP
@@ -1015,6 +1023,7 @@ With this common skill, you can shear the wool off of a sheeps body, or at least
 as much of it as you can. Master Shearing is over twice as slow as regular \
 Shearing, but yields three times as much wool.
 
+MASTERKNIT=MASTERTAILORING
 MKNIT=MASTERTAILORING
 MTAILOR=MASTERTAILORING
 MASTER_TAILORING=MASTERTAILORING
