@@ -1484,6 +1484,13 @@ If no entity is specified, this command will take a look around \
 the room or area your character is presently in.  See also \
 EXAMINE or LONGLOOK.
 
+METAMSGCOMMAND=\
+Command : METAMSGCOMMAND\n\r\
+Usage   : METAMSGCOMMAND\n\r\
+Example : metamsgcommand\n\r\
+Short(s): \n\r\
+Generates the HUH? message.  A command that's not a command.
+
 NEWS=\
 Command : NEWS\n\r\
 Usage   : NEWS (ON/OFF/AGAIN/PREVIOUS)\n\r\
