@@ -110,6 +110,7 @@ and instantly handcuff them for travel to the local judge for trial.  The \
 Collect Bounty skill is required to turn the prisoner over to the judge. \
 Otherwise, your other recourse is to turn the prisoner over to a cityguard.
 
+ASAP=SKILL_ARRESTINGSAP
 ARRESTING_SAP=SKILL_ARRESTINGSAP
 ARRESTINGSAP=SKILL_ARRESTINGSAP
 SKILL_ARRESTINGSAP=<ABILITY>\
@@ -1485,6 +1486,7 @@ The quality of the hide against other players depends in part on \
 the thieves stealth expertise. \
 The thief can use the VISIBLE command to make themself visible again.  
 
+HIDEINPLAINSITE=HIDE_IN_PLAIN_SIGHT
 THIEF_HIDEINPLAINSIGHT=HIDE_IN_PLAIN_SIGHT
 HIDE_IN_PLAIN_SIGHT=<ABILITY>\
 Usage    : HIDEINPLAINSIGHT\n\r\
@@ -2559,6 +2561,7 @@ to his or her place of origin, along with any npc group \
 members present with him or her.  Normal fleeing penalties \
 apply during combat.
 
+VRECOVER=RECOVER_VOICE
 DRUID_RECOVERVOICE=RECOVER_VOICE
 RECOVERVOICE=RECOVER_VOICE
 RECOVER_VOICE=<ABILITY>\
@@ -3093,6 +3096,7 @@ performed outdoors.  This skill sends a smoke signal viewable \
 throughout the entire area by those outside.  Those with the smoke \
 signal skill will be able to read the message in the signal.
 
+BUILDHOLD=THIEF_SMUGGLERSHOLD
 THIEF_SMUGGLERS_HOLD=THIEF_SMUGGLERSHOLD
 THIEF_BUILD_SMUGGLERS_HOLD=THIEF_SMUGGLERSHOLD
 SMUGGLERS_HOLD=THIEF_SMUGGLERSHOLD
