@@ -2,6 +2,7 @@
    1. New chants: Phosphorescence
    2. Anarchy clan govt type now has Clan Experience spell as an instant benefit.
    3. Pirates no longer regain lost limbs after death.
+   4. New resource: DIRT.  Mass Grave now populates its room with the stuff.
 # Build 5.9.4 Released 08/03/2016
    1. Qualify now shows language limits
    2. New Prop_NoTeleport exceptions
